fixed overflow-x and padding left

--- a/index.scss
+++ b/index.scss
@@ -1,11 +1,15 @@
 @import "settings";
 
+html {
+    overflow-x: hidden;
+}
 body {
     max-width: 1440px;
     margin: 0 auto;
     background-color: white;
     font-size: 1rem;
     font-family: "Monsterrat", sans-serif;
+    overflow-x: hidden;
 }
 
 /*--------------------------------------------------------------
@@ -65,6 +69,11 @@ Home Page Header:
                     max-width: 80%;
                 }
             }
+            @media only screen and (max-width: 455px) {
+                > .bigtitle {
+                    font-size: calc(13vw + 0.5rem);
+                }
+            }
             > .arrowdown {
                 margin: 1% 0 4% 10%;
             }
@@ -120,7 +129,7 @@ Home Page Options:
 @media only screen and (max-width: 720px) {
     .home-options {
         flex-flow: column wrap;
-        padding: 35px 30px 35px 30px;
+        padding: 35px 30px 35px 10px;
         > .columns {
             width: 100%;
             padding-bottom: 45px;
